

2012-02-19: Included Doug Puchalski's great refactoring of Model that provides an
            adapter for ArrayModelAdapter. WARNING!!! This is a breaking change
            since version 0.3.8. You will have to include:

            MotionModel::ArrayModelAdapter

            after including MotionModel::Model to get the same functionality.
            Failure to include an adapter (note: spelling counts :) will result
            in an exception so this will not quietly fail.

2012-01-24: Added block-structured transactions.

2012-01-14: Fixed problem where data returned from forms was of type NSString, which
            confused some monkey-patching code.
            Changed before_ hooks such that handlers returning false would terminate
            the process. So, if before_save returns anything other than false, the
            save continues. Only if before_save returns false does the save get
            interrupted.
            Fixed immutable string issue in validations.

2012-01-09: Added automatic date/timestamp support for created_at and updated_at columns
            Added Hash extension except, Array introspection methods has_hash_key? and
            has_hash_value?
            Commit of Formotion module including optional inclusion/suppression of the
            auto-date fields
            Specs


2012-12-30: Added Formotion module. This allows for tighter integration with Formotion
            Changed options for columns such that any arbitrary values can be inserted
            allowing for future expansion.

2012-12-14: Added lots of framework to validations
            Added validations for length, format, email, presence
            Added array type (thanks justinmcp)

2012-12-07: Added MIT license file.
            InputHelpers: Whitespace cleanup. Fixed keyboard show/hide to scroll to correct position.
            MotionModel::Column: Whitespace cleanup, added code to support cascading delete (:dependent => :destroy)